tests/js_error/source_locations/expression/construct/basic.exp
Error: 
  at foo (tests/js_error/source_locations/expression/construct/basic.js:2:9)
  at <global> (tests/js_error/source_locations/expression/construct/basic.js:5:2)
