tests/js_error/source_locations/expression/construct/basic.js
function foo() {
  throw new Error()
}

(new foo());